<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="3.0"
        android:background="@drawable/gradient_background"
        tools:context=".presentation.HomeActivity"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/movie_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_rounded"
            android:padding="15dp"
            android:text="@string/text_movie"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            app:backgroundTint="#673AB7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/message_movie"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_rounded"
            android:padding="15dp"
            android:text="@string/text_tv_show"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            app:backgroundTint="#673AB7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/message_tv_show"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/artists_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.0"
            android:background="@drawable/btn_rounded"
            android:padding="15dp"
            android:text="@string/text_artist"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            app:backgroundTint="#673AB7" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/message_artist"/>

    </LinearLayout>
</layout>